--- a/main.ipynb
+++ b/main.ipynb
@@ -2,36 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import requests\n",
+    "import json\n",
     "import os\n",
-    "import glob\n",
+    "from datetime import datetime\n",
+    "#Fazer análise de discursos. Palavras mais usads por partidos\n",
     "\n",
-    "data_path = 'data/'\n",
+    "congress_url = \"https://dadosabertos.camara.leg.br/api/v2/\"\n",
+    "current_year = datetime.now().year\n",
+    "years = list(range(current_year, 2007, -1))\n",
     "\n",
-    "files = glob.glob(os.path.join(data_path, '*.csv'))\n",
     "\n",
-    "dataframes = []\n",
     "\n",
-    "for file in files:\n",
-    "    print(file)\n",
-    "    df = pd.read_csv(file, encoding='utf-8', encoding_errors=False)\n",
-    "    # df.head()"
+    "def get_all_congress_members_year(year):\n",
+    "    print(f'------------{year}------------')\n",
+    "    if not os.path.exists(f'data/deputados-{year}.json'):\n",
+    "        all_members_response = requests.get(f'{congress_url}/deputados')\n",
+    "\n",
+    "        if(all_members_response.status_code == 200):\n",
+    "            with open(f'data/deputados-{year}.json', 'w', encoding='utf-8') as file:\n",
+    "                json.dump(all_members_response.json(), file, ensure_ascii=False)\n",
+    "    else:\n",
+    "        print(f'File for year {year} already exists. Exiting')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for year in years:\n",
+    "    get_all_congress_members_year(year)"
    ]
   }
  ],
