Getting political parties numbers of members of the year

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -102,19 +102,537 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "512\n"
+      "MDB\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "PSDB\n",
+      "NOVO\n",
+      "PP\n",
+      "PSDB\n",
+      "PP\n",
+      "PDT\n",
+      "PP\n",
+      "PT\n",
+      "PP\n",
+      "PL\n",
+      "REPUBLICANOS\n",
+      "MDB\n",
+      "PT\n",
+      "CIDADANIA\n",
+      "REPUBLICANOS\n",
+      "MDB\n",
+      "PT\n",
+      "PT\n",
+      "UNIÃO\n",
+      "PCdoB\n",
+      "PV\n",
+      "PP\n",
+      "PL\n",
+      "REPUBLICANOS\n",
+      "PP\n",
+      "REPUBLICANOS\n",
+      "CIDADANIA\n",
+      "PP\n",
+      "PT\n",
+      "PT\n",
+      "PL\n",
+      "PL\n",
+      "PDT\n",
+      "AVANTE\n",
+      "MDB\n",
+      "REPUBLICANOS\n",
+      "REPUBLICANOS\n",
+      "PSD\n",
+      "PL\n",
+      "MDB\n",
+      "CIDADANIA\n",
+      "PT\n",
+      "CIDADANIA\n",
+      "PP\n",
+      "UNIÃO\n",
+      "PSD\n",
+      "PP\n",
+      "REPUBLICANOS\n",
+      "MDB\n",
+      "SOLIDARIEDADE\n",
+      "PV\n",
+      "MDB\n",
+      "PSB\n",
+      "PP\n",
+      "PT\n",
+      "UNIÃO\n",
+      "PSDB\n",
+      "PSDB\n",
+      "PL\n",
+      "PL\n",
+      "PT\n",
+      "AVANTE\n",
+      "PODE\n",
+      "PL\n",
+      "PSD\n",
+      "PT\n",
+      "PL\n",
+      "PL\n",
+      "PL\n",
+      "UNIÃO\n",
+      "PL\n",
+      "UNIÃO\n",
+      "PL\n",
+      "PSD\n",
+      "PT\n",
+      "PT\n",
+      "PT\n",
+      "PL\n",
+      "PSD\n",
+      "PSOL\n",
+      "MDB\n",
+      "PSD\n",
+      "REPUBLICANOS\n",
+      "PSD\n",
+      "PSD\n",
+      "PSOL\n",
+      "S.PART.\n",
+      "PL\n",
+      "PP\n",
+      "PP\n",
+      "MDB\n",
+      "PV\n",
+      "MDB\n",
+      "UNIÃO\n",
+      "PL\n",
+      "PL\n",
+      "PL\n",
+      "UNIÃO\n",
+      "PP\n",
+      "UNIÃO\n",
+      "PP\n",
+      "PSDB\n",
+      "PCdoB\n",
+      "UNIÃO\n",
+      "UNIÃO\n",
+      "PT\n",
+      "UNIÃO\n",
+      "PL\n",
+      "PCdoB\n",
+      "PP\n",
+      "PL\n",
+      "PSDB\n",
+      "UNIÃO\n",
+      "PL\n",
+      "UNIÃO\n",
+      "PSD\n",
+      "UNIÃO\n",
+      "UNIÃO\n",
+      "REPUBLICANOS\n",
+      "PT\n",
+      "AVANTE\n",
+      "PSD\n",
+      "PP\n",
+      "PL\n",
+      "PP\n",
+      "PL\n",
+      "PP\n",
+      "UNIÃO\n",
+      "UNIÃO\n",
+      "MDB\n",
+      "PL\n",
+      "PL\n",
+      "PT\n",
+      "PL\n",
+      "PSD\n",
+      "PSD\n",
+      "REPUBLICANOS\n",
+      "PP\n",
+      "PT\n",
+      "PP\n",
+      "PT\n",
+      "PSD\n",
+      "PL\n",
+      "PDT\n",
+      "UNIÃO\n",
+      "PP\n",
+      "UNIÃO\n",
+      "PT\n",
+      "PRD\n",
+      "PSD\n",
+      "PL\n",
+      "PP\n",
+      "PODE\n",
+      "UNIÃO\n",
+      "MDB\n",
+      "PSB\n",
+      "MDB\n",
+      "PDT\n",
+      "PL\n",
+      "PP\n",
+      "UNIÃO\n",
+      "MDB\n",
+      "PL\n",
+      "UNIÃO\n",
+      "REPUBLICANOS\n",
+      "MDB\n",
+      "PL\n",
+      "PDT\n",
+      "PCdoB\n",
+      "PSB\n",
+      "PSOL\n",
+      "PT\n",
+      "PL\n",
+      "MDB\n",
+      "PP\n",
+      "PODE\n",
+      "UNIÃO\n",
+      "MDB\n",
+      "PP\n",
+      "UNIÃO\n",
+      "UNIÃO\n",
+      "PSB\n",
+      "UNIÃO\n",
+      "PDT\n",
+      "PSOL\n",
+      "UNIÃO\n",
+      "UNIÃO\n",
+      "PT\n",
+      "PP\n",
+      "PL\n",
+      "PL\n",
+      "PL\n",
+      "PDT\n",
+      "PT\n",
+      "PT\n",
+      "REPUBLICANOS\n",
+      "PRD\n",
+      "REPUBLICANOS\n",
+      "REPUBLICANOS\n",
+      "PSD\n",
+      "PL\n",
+      "PL\n",
+      "PSDB\n",
+      "UNIÃO\n",
+      "PSDB\n",
+      "PSB\n",
+      "PL\n",
+      "REPUBLICANOS\n",
+      "PSD\n",
+      "PODE\n",
+      "NOVO\n",
+      "PL\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "UNIÃO\n",
+      "PSOL\n",
+      "PODE\n",
+      "AVANTE\n",
+      "PSOL\n",
+      "PSB\n",
+      "PL\n",
+      "REPUBLICANOS\n",
+      "MDB\n",
+      "PSB\n",
+      "PT\n",
+      "MDB\n",
+      "PL\n",
+      "MDB\n",
+      "MDB\n",
+      "MDB\n",
+      "PSD\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "PSD\n",
+      "PSD\n",
+      "MDB\n",
+      "UNIÃO\n",
+      "PSOL\n",
+      "PT\n",
+      "MDB\n",
+      "PT\n",
+      "REPUBLICANOS\n",
+      "PCdoB\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "PT\n",
+      "PL\n",
+      "MDB\n",
+      "PT\n",
+      "PP\n",
+      "PP\n",
+      "PL\n",
+      "PSB\n",
+      "REPUBLICANOS\n",
+      "REPUBLICANOS\n",
+      "PT\n",
+      "PT\n",
+      "PT\n",
+      "PL\n",
+      "UNIÃO\n",
+      "MDB\n",
+      "UNIÃO\n",
+      "PT\n",
+      "PDT\n",
+      "PT\n",
+      "PL\n",
+      "PSD\n",
+      "MDB\n",
+      "PL\n",
+      "PT\n",
+      "PP\n",
+      "PSD\n",
+      "REPUBLICANOS\n",
+      "PP\n",
+      "UNIÃO\n",
+      "PL\n",
+      "PSD\n",
+      "PL\n",
+      "PSB\n",
+      "REPUBLICANOS\n",
+      "MDB\n",
+      "PT\n",
+      "UNIÃO\n",
+      "REPUBLICANOS\n",
+      "PSD\n",
+      "PP\n",
+      "UNIÃO\n",
+      "PSDB\n",
+      "PT\n",
+      "PDT\n",
+      "PT\n",
+      "PDT\n",
+      "UNIÃO\n",
+      "PSB\n",
+      "PL\n",
+      "PT\n",
+      "PSB\n",
+      "PSDB\n",
+      "PSD\n",
+      "PV\n",
+      "UNIÃO\n",
+      "PSB\n",
+      "REPUBLICANOS\n",
+      "MDB\n",
+      "REPUBLICANOS\n",
+      "AVANTE\n",
+      "PSD\n",
+      "UNIÃO\n",
+      "PODE\n",
+      "PL\n",
+      "PT\n",
+      "PSD\n",
+      "PSD\n",
+      "PL\n",
+      "PSD\n",
+      "PL\n",
+      "PSOL\n",
+      "PT\n",
+      "PP\n",
+      "PRD\n",
+      "UNIÃO\n",
+      "NOVO\n",
+      "PL\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "PP\n",
+      "PL\n",
+      "MDB\n",
+      "PDT\n",
+      "PCdoB\n",
+      "REPUBLICANOS\n",
+      "PP\n",
+      "PT\n",
+      "PSD\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "UNIÃO\n",
+      "PDT\n",
+      "SOLIDARIEDADE\n",
+      "PT\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "PDT\n",
+      "PP\n",
+      "PRD\n",
+      "MDB\n",
+      "PP\n",
+      "PL\n",
+      "UNIÃO\n",
+      "PL\n",
+      "PODE\n",
+      "PP\n",
+      "PDT\n",
+      "PDT\n",
+      "UNIÃO\n",
+      "UNIÃO\n",
+      "PT\n",
+      "PP\n",
+      "REPUBLICANOS\n",
+      "PT\n",
+      "PL\n",
+      "PSD\n",
+      "UNIÃO\n",
+      "UNIÃO\n",
+      "REPUBLICANOS\n",
+      "PT\n",
+      "PL\n",
+      "PODE\n",
+      "PP\n",
+      "MDB\n",
+      "UNIÃO\n",
+      "PL\n",
+      "PT\n",
+      "PSD\n",
+      "PT\n",
+      "MDB\n",
+      "PCdoB\n",
+      "MDB\n",
+      "REPUBLICANOS\n",
+      "MDB\n",
+      "PSD\n",
+      "UNIÃO\n",
+      "PT\n",
+      "UNIÃO\n",
+      "UNIÃO\n",
+      "PL\n",
+      "PL\n",
+      "PSOL\n",
+      "AVANTE\n",
+      "PT\n",
+      "UNIÃO\n",
+      "PT\n",
+      "SOLIDARIEDADE\n",
+      "PSDB\n",
+      "PSDB\n",
+      "UNIÃO\n",
+      "PSB\n",
+      "PL\n",
+      "PT\n",
+      "PSD\n",
+      "PSD\n",
+      "PT\n",
+      "PRD\n",
+      "PSB\n",
+      "UNIÃO\n",
+      "PP\n",
+      "PSD\n",
+      "PT\n",
+      "PP\n",
+      "MDB\n",
+      "PP\n",
+      "PDT\n",
+      "PL\n",
+      "PV\n",
+      "PL\n",
+      "PDT\n",
+      "PSOL\n",
+      "MDB\n",
+      "MDB\n",
+      "UNIÃO\n",
+      "PODE\n",
+      "PSD\n",
+      "PT\n",
+      "PT\n",
+      "PSD\n",
+      "PODE\n",
+      "MDB\n",
+      "PCdoB\n",
+      "PSD\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "MDB\n",
+      "NOVO\n",
+      "PDT\n",
+      "PL\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "PL\n",
+      "PL\n",
+      "PL\n",
+      "UNIÃO\n",
+      "PSD\n",
+      "PODE\n",
+      "UNIÃO\n",
+      "REPUBLICANOS\n",
+      "PT\n",
+      "PODE\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "UNIÃO\n",
+      "PL\n",
+      "PT\n",
+      "PT\n",
+      "PT\n",
+      "PODE\n",
+      "PSOL\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "PSD\n",
+      "PL\n",
+      "PODE\n",
+      "PSD\n",
+      "MDB\n",
+      "PSD\n",
+      "REPUBLICANOS\n",
+      "PP\n",
+      "PL\n",
+      "UNIÃO\n",
+      "MDB\n",
+      "PP\n",
+      "PL\n",
+      "PL\n",
+      "PL\n",
+      "PSD\n",
+      "PSB\n",
+      "PT\n",
+      "PSOL\n",
+      "PSOL\n",
+      "PP\n",
+      "REPUBLICANOS\n",
+      "PP\n",
+      "PL\n",
+      "PP\n",
+      "REDE\n",
+      "PT\n",
+      "PT\n",
+      "PL\n",
+      "PT\n",
+      "PP\n",
+      "REPUBLICANOS\n",
+      "PL\n",
+      "PSDB\n",
+      "AVANTE\n",
+      "PT\n",
+      "SOLIDARIEDADE\n",
+      "PL\n",
+      "PT\n",
+      "REPUBLICANOS\n",
+      "UNIÃO\n",
+      "MDB\n",
+      "PP\n",
+      "PSD\n",
+      "PT\n",
+      "SOLIDARIEDADE\n",
+      "PL\n",
+      "PL\n",
+      "PT\n",
+      "PP\n",
+      "PL\n"
      ]
     }
    ],
    "source": [
-    "political_parties_2008 = {}\n",
+    "partidos_2008 = {}\n",
     "\n",
     "\n",
     "with open('data/deputados-2008.json', 'r', encoding='utf-8') as file:\n",
     "    data_2008 = json.load(file)\n",
+    "\n",
+    "data = data_2008['dados']\n",
+    "for deputado in data:\n",
+    "    partido = deputado['siglaPartido']\n",
+    "    if partido not in partidos_2008:\n",
+    "        partidos_2008[partido] = 1\n",
+    "    else:\n",
+    "        partidos_2008[partido] += 1\n",
     "    \n",
-    "for i in len(data_2008):\n",
-    "    political_parties_2008.append()"
+    "print(partidos_2008)"
    ]
   },
   {
@@ -123,14 +641,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[87]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mdict\u001b[39m = {}\n\u001b[32m      3\u001b[39m data = [\u001b[33m'\u001b[39m\u001b[33mpt\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mpt\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mpt\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mpl\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mpl\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mpmdb\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43md\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43md\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mnot\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mdict\u001b[39;49m\u001b[43m:\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mdict\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43md\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1\u001b[39;49m\n",
-      "\u001b[31mTypeError\u001b[39m: 'int' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "{'pt': 3, 'pl': 2, 'pmdb': 1}\n"
      ]
     }
    ],
