--- a/main.ipynb
+++ b/main.ipynb
@@ -95,525 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MDB\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "PSDB\n",
-      "NOVO\n",
-      "PP\n",
-      "PSDB\n",
-      "PP\n",
-      "PDT\n",
-      "PP\n",
-      "PT\n",
-      "PP\n",
-      "PL\n",
-      "REPUBLICANOS\n",
-      "MDB\n",
-      "PT\n",
-      "CIDADANIA\n",
-      "REPUBLICANOS\n",
-      "MDB\n",
-      "PT\n",
-      "PT\n",
-      "UNIÃO\n",
-      "PCdoB\n",
-      "PV\n",
-      "PP\n",
-      "PL\n",
-      "REPUBLICANOS\n",
-      "PP\n",
-      "REPUBLICANOS\n",
-      "CIDADANIA\n",
-      "PP\n",
-      "PT\n",
-      "PT\n",
-      "PL\n",
-      "PL\n",
-      "PDT\n",
-      "AVANTE\n",
-      "MDB\n",
-      "REPUBLICANOS\n",
-      "REPUBLICANOS\n",
-      "PSD\n",
-      "PL\n",
-      "MDB\n",
-      "CIDADANIA\n",
-      "PT\n",
-      "CIDADANIA\n",
-      "PP\n",
-      "UNIÃO\n",
-      "PSD\n",
-      "PP\n",
-      "REPUBLICANOS\n",
-      "MDB\n",
-      "SOLIDARIEDADE\n",
-      "PV\n",
-      "MDB\n",
-      "PSB\n",
-      "PP\n",
-      "PT\n",
-      "UNIÃO\n",
-      "PSDB\n",
-      "PSDB\n",
-      "PL\n",
-      "PL\n",
-      "PT\n",
-      "AVANTE\n",
-      "PODE\n",
-      "PL\n",
-      "PSD\n",
-      "PT\n",
-      "PL\n",
-      "PL\n",
-      "PL\n",
-      "UNIÃO\n",
-      "PL\n",
-      "UNIÃO\n",
-      "PL\n",
-      "PSD\n",
-      "PT\n",
-      "PT\n",
-      "PT\n",
-      "PL\n",
-      "PSD\n",
-      "PSOL\n",
-      "MDB\n",
-      "PSD\n",
-      "REPUBLICANOS\n",
-      "PSD\n",
-      "PSD\n",
-      "PSOL\n",
-      "S.PART.\n",
-      "PL\n",
-      "PP\n",
-      "PP\n",
-      "MDB\n",
-      "PV\n",
-      "MDB\n",
-      "UNIÃO\n",
-      "PL\n",
-      "PL\n",
-      "PL\n",
-      "UNIÃO\n",
-      "PP\n",
-      "UNIÃO\n",
-      "PP\n",
-      "PSDB\n",
-      "PCdoB\n",
-      "UNIÃO\n",
-      "UNIÃO\n",
-      "PT\n",
-      "UNIÃO\n",
-      "PL\n",
-      "PCdoB\n",
-      "PP\n",
-      "PL\n",
-      "PSDB\n",
-      "UNIÃO\n",
-      "PL\n",
-      "UNIÃO\n",
-      "PSD\n",
-      "UNIÃO\n",
-      "UNIÃO\n",
-      "REPUBLICANOS\n",
-      "PT\n",
-      "AVANTE\n",
-      "PSD\n",
-      "PP\n",
-      "PL\n",
-      "PP\n",
-      "PL\n",
-      "PP\n",
-      "UNIÃO\n",
-      "UNIÃO\n",
-      "MDB\n",
-      "PL\n",
-      "PL\n",
-      "PT\n",
-      "PL\n",
-      "PSD\n",
-      "PSD\n",
-      "REPUBLICANOS\n",
-      "PP\n",
-      "PT\n",
-      "PP\n",
-      "PT\n",
-      "PSD\n",
-      "PL\n",
-      "PDT\n",
-      "UNIÃO\n",
-      "PP\n",
-      "UNIÃO\n",
-      "PT\n",
-      "PRD\n",
-      "PSD\n",
-      "PL\n",
-      "PP\n",
-      "PODE\n",
-      "UNIÃO\n",
-      "MDB\n",
-      "PSB\n",
-      "MDB\n",
-      "PDT\n",
-      "PL\n",
-      "PP\n",
-      "UNIÃO\n",
-      "MDB\n",
-      "PL\n",
-      "UNIÃO\n",
-      "REPUBLICANOS\n",
-      "MDB\n",
-      "PL\n",
-      "PDT\n",
-      "PCdoB\n",
-      "PSB\n",
-      "PSOL\n",
-      "PT\n",
-      "PL\n",
-      "MDB\n",
-      "PP\n",
-      "PODE\n",
-      "UNIÃO\n",
-      "MDB\n",
-      "PP\n",
-      "UNIÃO\n",
-      "UNIÃO\n",
-      "PSB\n",
-      "UNIÃO\n",
-      "PDT\n",
-      "PSOL\n",
-      "UNIÃO\n",
-      "UNIÃO\n",
-      "PT\n",
-      "PP\n",
-      "PL\n",
-      "PL\n",
-      "PL\n",
-      "PDT\n",
-      "PT\n",
-      "PT\n",
-      "REPUBLICANOS\n",
-      "PRD\n",
-      "REPUBLICANOS\n",
-      "REPUBLICANOS\n",
-      "PSD\n",
-      "PL\n",
-      "PL\n",
-      "PSDB\n",
-      "UNIÃO\n",
-      "PSDB\n",
-      "PSB\n",
-      "PL\n",
-      "REPUBLICANOS\n",
-      "PSD\n",
-      "PODE\n",
-      "NOVO\n",
-      "PL\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "UNIÃO\n",
-      "PSOL\n",
-      "PODE\n",
-      "AVANTE\n",
-      "PSOL\n",
-      "PSB\n",
-      "PL\n",
-      "REPUBLICANOS\n",
-      "MDB\n",
-      "PSB\n",
-      "PT\n",
-      "MDB\n",
-      "PL\n",
-      "MDB\n",
-      "MDB\n",
-      "MDB\n",
-      "PSD\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "PSD\n",
-      "PSD\n",
-      "MDB\n",
-      "UNIÃO\n",
-      "PSOL\n",
-      "PT\n",
-      "MDB\n",
-      "PT\n",
-      "REPUBLICANOS\n",
-      "PCdoB\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "PT\n",
-      "PL\n",
-      "MDB\n",
-      "PT\n",
-      "PP\n",
-      "PP\n",
-      "PL\n",
-      "PSB\n",
-      "REPUBLICANOS\n",
-      "REPUBLICANOS\n",
-      "PT\n",
-      "PT\n",
-      "PT\n",
-      "PL\n",
-      "UNIÃO\n",
-      "MDB\n",
-      "UNIÃO\n",
-      "PT\n",
-      "PDT\n",
-      "PT\n",
-      "PL\n",
-      "PSD\n",
-      "MDB\n",
-      "PL\n",
-      "PT\n",
-      "PP\n",
-      "PSD\n",
-      "REPUBLICANOS\n",
-      "PP\n",
-      "UNIÃO\n",
-      "PL\n",
-      "PSD\n",
-      "PL\n",
-      "PSB\n",
-      "REPUBLICANOS\n",
-      "MDB\n",
-      "PT\n",
-      "UNIÃO\n",
-      "REPUBLICANOS\n",
-      "PSD\n",
-      "PP\n",
-      "UNIÃO\n",
-      "PSDB\n",
-      "PT\n",
-      "PDT\n",
-      "PT\n",
-      "PDT\n",
-      "UNIÃO\n",
-      "PSB\n",
-      "PL\n",
-      "PT\n",
-      "PSB\n",
-      "PSDB\n",
-      "PSD\n",
-      "PV\n",
-      "UNIÃO\n",
-      "PSB\n",
-      "REPUBLICANOS\n",
-      "MDB\n",
-      "REPUBLICANOS\n",
-      "AVANTE\n",
-      "PSD\n",
-      "UNIÃO\n",
-      "PODE\n",
-      "PL\n",
-      "PT\n",
-      "PSD\n",
-      "PSD\n",
-      "PL\n",
-      "PSD\n",
-      "PL\n",
-      "PSOL\n",
-      "PT\n",
-      "PP\n",
-      "PRD\n",
-      "UNIÃO\n",
-      "NOVO\n",
-      "PL\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "PP\n",
-      "PL\n",
-      "MDB\n",
-      "PDT\n",
-      "PCdoB\n",
-      "REPUBLICANOS\n",
-      "PP\n",
-      "PT\n",
-      "PSD\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "UNIÃO\n",
-      "PDT\n",
-      "SOLIDARIEDADE\n",
-      "PT\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "PDT\n",
-      "PP\n",
-      "PRD\n",
-      "MDB\n",
-      "PP\n",
-      "PL\n",
-      "UNIÃO\n",
-      "PL\n",
-      "PODE\n",
-      "PP\n",
-      "PDT\n",
-      "PDT\n",
-      "UNIÃO\n",
-      "UNIÃO\n",
-      "PT\n",
-      "PP\n",
-      "REPUBLICANOS\n",
-      "PT\n",
-      "PL\n",
-      "PSD\n",
-      "UNIÃO\n",
-      "UNIÃO\n",
-      "REPUBLICANOS\n",
-      "PT\n",
-      "PL\n",
-      "PODE\n",
-      "PP\n",
-      "MDB\n",
-      "UNIÃO\n",
-      "PL\n",
-      "PT\n",
-      "PSD\n",
-      "PT\n",
-      "MDB\n",
-      "PCdoB\n",
-      "MDB\n",
-      "REPUBLICANOS\n",
-      "MDB\n",
-      "PSD\n",
-      "UNIÃO\n",
-      "PT\n",
-      "UNIÃO\n",
-      "UNIÃO\n",
-      "PL\n",
-      "PL\n",
-      "PSOL\n",
-      "AVANTE\n",
-      "PT\n",
-      "UNIÃO\n",
-      "PT\n",
-      "SOLIDARIEDADE\n",
-      "PSDB\n",
-      "PSDB\n",
-      "UNIÃO\n",
-      "PSB\n",
-      "PL\n",
-      "PT\n",
-      "PSD\n",
-      "PSD\n",
-      "PT\n",
-      "PRD\n",
-      "PSB\n",
-      "UNIÃO\n",
-      "PP\n",
-      "PSD\n",
-      "PT\n",
-      "PP\n",
-      "MDB\n",
-      "PP\n",
-      "PDT\n",
-      "PL\n",
-      "PV\n",
-      "PL\n",
-      "PDT\n",
-      "PSOL\n",
-      "MDB\n",
-      "MDB\n",
-      "UNIÃO\n",
-      "PODE\n",
-      "PSD\n",
-      "PT\n",
-      "PT\n",
-      "PSD\n",
-      "PODE\n",
-      "MDB\n",
-      "PCdoB\n",
-      "PSD\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "MDB\n",
-      "NOVO\n",
-      "PDT\n",
-      "PL\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "PL\n",
-      "PL\n",
-      "PL\n",
-      "UNIÃO\n",
-      "PSD\n",
-      "PODE\n",
-      "UNIÃO\n",
-      "REPUBLICANOS\n",
-      "PT\n",
-      "PODE\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "UNIÃO\n",
-      "PL\n",
-      "PT\n",
-      "PT\n",
-      "PT\n",
-      "PODE\n",
-      "PSOL\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "PSD\n",
-      "PL\n",
-      "PODE\n",
-      "PSD\n",
-      "MDB\n",
-      "PSD\n",
-      "REPUBLICANOS\n",
-      "PP\n",
-      "PL\n",
-      "UNIÃO\n",
-      "MDB\n",
-      "PP\n",
-      "PL\n",
-      "PL\n",
-      "PL\n",
-      "PSD\n",
-      "PSB\n",
-      "PT\n",
-      "PSOL\n",
-      "PSOL\n",
-      "PP\n",
-      "REPUBLICANOS\n",
-      "PP\n",
-      "PL\n",
-      "PP\n",
-      "REDE\n",
-      "PT\n",
-      "PT\n",
-      "PL\n",
-      "PT\n",
-      "PP\n",
-      "REPUBLICANOS\n",
-      "PL\n",
-      "PSDB\n",
-      "AVANTE\n",
-      "PT\n",
-      "SOLIDARIEDADE\n",
-      "PL\n",
-      "PT\n",
-      "REPUBLICANOS\n",
-      "UNIÃO\n",
-      "MDB\n",
-      "PP\n",
-      "PSD\n",
-      "PT\n",
-      "SOLIDARIEDADE\n",
-      "PL\n",
-      "PL\n",
-      "PT\n",
-      "PP\n",
-      "PL\n"
+      "{'MDB': 43, 'REPUBLICANOS': 44, 'PL': 92, 'PSDB': 13, 'NOVO': 4, 'PP': 50, 'PDT': 18, 'PT': 67, 'CIDADANIA': 4, 'UNIÃO': 59, 'PCdoB': 8, 'PV': 5, 'AVANTE': 7, 'PSD': 44, 'SOLIDARIEDADE': 5, 'PSB': 15, 'PODE': 14, 'PSOL': 13, 'S.PART.': 1, 'PRD': 5, 'REDE': 1}\n"
      ]
     }
    ],
