--- a/main.ipynb
+++ b/main.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,13 +110,13 @@
     "partidos_serie_historica_ordenado = []\n",
     "\n",
     "for partido in partidos_serie_historica:\n",
-    "    partidos_ordenados = dict(sorted(partido.items(), key=lambda item: item[1], reverse=True)[:10])\n",
+    "    partidos_ordenados = dict(sorted(partido.items(), key=lambda item: item[1], reverse=True)[:5])\n",
     "    partidos_serie_historica_ordenado.append(partidos_ordenados)  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -190,16 +190,17 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PMDB</th>\n",
+       "      <th>PL</th>\n",
        "      <th>PT</th>\n",
-       "      <th>DEM</th>\n",
-       "      <th>PSDB</th>\n",
-       "      <th>PR</th>\n",
-       "      <th>PP**</th>\n",
-       "      <th>PSB</th>\n",
-       "      <th>PDT</th>\n",
+       "      <th>UNIÃO</th>\n",
+       "      <th>PP</th>\n",
        "      <th>PSD</th>\n",
-       "      <th>PTB</th>\n",
+       "      <th>PR</th>\n",
+       "      <th>MDB</th>\n",
+       "      <th>PSL</th>\n",
+       "      <th>PMDB</th>\n",
+       "      <th>PSDB</th>\n",
+       "      <th>DEM</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -215,73 +216,85 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>47.916667</td>\n",
+       "      <td>12.328767</td>\n",
+       "      <td>101.515152</td>\n",
+       "      <td>73.076923</td>\n",
+       "      <td>63.265306</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-25.609756</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-20.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>106.557377</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2009</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23.015873</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.047619</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.058394</td>\n",
+       "      <td>12.643678</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      PMDB   PT  DEM  PSDB   PR  PP**  PSB  PDT  PSD  PTB\n",
-       "2025   NaN  NaN  NaN   NaN  NaN   NaN  NaN  NaN  NaN  NaN\n",
-       "2021   0.0  0.0  0.0   0.0  0.0   0.0  0.0  0.0  0.0  0.0\n",
-       "2017   0.0  0.0  0.0   0.0  0.0   0.0  0.0  0.0  0.0  0.0\n",
-       "2013   0.0  0.0  0.0   0.0  0.0   0.0  0.0  0.0  0.0  0.0\n",
-       "2009   0.0  0.0  0.0   0.0  0.0   0.0  0.0  0.0  0.0  0.0"
+       "             PL          PT       UNIÃO         PP        PSD         PR  MDB  \\\n",
+       "2025        NaN         NaN         NaN        NaN        NaN        NaN  NaN   \n",
+       "2021  47.916667   12.328767  101.515152  73.076923  63.265306        NaN  NaN   \n",
+       "2017        NaN  -25.609756         NaN -20.000000        NaN        NaN  NaN   \n",
+       "2013        NaN  106.557377         NaN        NaN        NaN   0.000000  NaN   \n",
+       "2009        NaN   23.015873         NaN        NaN        NaN  19.047619  NaN   \n",
+       "\n",
+       "      PSL       PMDB       PSDB  DEM  \n",
+       "2025  NaN        NaN        NaN  NaN  \n",
+       "2021  NaN        NaN        NaN  NaN  \n",
+       "2017  NaN        NaN        NaN  NaN  \n",
+       "2013  NaN        NaN        NaN  NaN  \n",
+       "2009  NaN  16.058394  12.643678  NaN  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +302,7 @@
    "source": [
     "\n",
     "\n",
-    "df_variacao = df.pct_change() * 100\n",
+    "df_variacao = df.pct_change(fill_method=None) * 100\n",
     "df_variacao.head()\n",
     "\n",
     "\n"
