Removing unused code

--- a/main.ipynb
+++ b/main.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -152,21 +152,20 @@
     "\n",
     "for partido in  df.columns:\n",
     "    \n",
-    "    plt.plot(df.index, df[partido], marker='o', linestyle='-', label=partido)\n",
+    "    plt.plot(df.index, df[partido], marker='o', linestyle='-', label=partido,)\n",
     "\n",
     "plt.xlabel(\"Ano\")\n",
     "plt.ylabel(\"Número de Deputados\")\n",
     "plt.title(\"Variação do Número de Deputados por Partido (2008-2025)\")\n",
     "plt.legend()\n",
-    "plt.grid(True)\n",
+    "plt.grid()\n",
     "\n",
-    "# Exibir o gráfico\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +293,7 @@
        "2009  NaN  16.058394  12.643678  NaN  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,6 +306,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
