--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,6 @@
     "years = list(range(current_year, 2007, -4))\n",
     "\n",
     "def get_all_congress_members_year(year):\n",
-    "    print(f'------------{year}------------')\n",
     "    try:\n",
     "        if not os.path.exists(f'data/deputados-{year}.json'):\n",
     "            all_members_response = requests.get(f'{congress_url}/deputados?dataInicio={year}-01-01&dataFim={year+3}-01-01')\n",
@@ -45,9 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File for year 2025 already exists. Exiting\n",
+      "File for year 2021 already exists. Exiting\n",
+      "File for year 2017 already exists. Exiting\n",
+      "File for year 2013 already exists. Exiting\n",
+      "File for year 2009 already exists. Exiting\n"
+     ]
+    }
+   ],
    "source": [
     "for year in years:\n",
     "    get_all_congress_members_year(year)"
@@ -55,26 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'siglaPartido'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m data = deputados_json[\u001b[33m'\u001b[39m\u001b[33mdados\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m data:\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mi\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msiglaPartido\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n",
-      "\u001b[31mKeyError\u001b[39m: 'siglaPartido'"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -134,8 +126,6 @@
     "\n",
     "\n",
     "df = pd.DataFrame(partidos_serie_historica_ordenado, index=years)\n",
-    "print(df.head())\n",
-    "\n",
     "plt.figure(figsize=(15, 5))\n",
     "\n",
     "for partido in  df.columns:\n",
@@ -153,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
