--- a/despesas.ipynb
+++ b/despesas.ipynb
@@ -23,8 +23,14 @@
     "    data = response['dados']\n",
     "\n",
     "    for despesa in data:\n",
+    "        valorLiquido = despesa['valorLiquido']\n",
     "        if despesa['siglaPartido'] == '':\n",
-    "            gastos_por_partido[despesa['nome']]"
+    "            if despesa['nome'] in gastos_por_partido[despesa['nome']]:\n",
+    "                gastos_por_partido[despesa['nome']] += valorLiquido\n",
+    "            else:\n",
+    "                gastos_por_partido[despesa['nome']] = valorLiquido\n",
+    "            \n",
+    "            "
    ]
   },
   {
