--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "        if not os.path.exists(f'data/deputados-{year}.json'):\n",
     "            all_members_response = requests.get(f'{congress_url}/deputados?dataInicio={year}-01-01&dataFim={year+3}-01-01')\n",
     "\n",
-    "            if(all_members_response.status_code == 200):\n",
+    "            if all_members_response.status_code == 200 :\n",
     "                with open(f'data/deputados-{year}.json', 'w', encoding='utf-8') as file:\n",
     "                    json.dump(all_members_response.json(), file, ensure_ascii=False)\n",
     "        else:\n",
