Adding all deputados

--- a/all_deputados.ipynb
+++ b/all_deputados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -64,13 +64,67 @@
     "    \n",
     "    with open(f'data/deputados/{f}', 'r', encoding='utf-8') as file:\n",
     "        data = json.load(file)\n",
-    "        print(data)\n",
     "        deputados_list.append(DeputadoUri(**data))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "id_legislaturas = {}\n",
+    "\n",
+    "for deputado in deputados_list:\n",
+    "    id = deputado.dados.ultimoStatus.idLegislatura\n",
+    "    if id not in id_legislaturas:\n",
+    "        id_legislaturas[id] = 1\n",
+    "    else:\n",
+    "        id_legislaturas[id] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7861\n"
+     ]
+    }
+   ],
+   "source": [
+    "partidos = {}\n",
+    "\n",
+    "for deputado in deputados_list:\n",
+    "    partido_deputado = deputado.dados.ultimoStatus.siglaPartido\n",
+    "    if partido_deputado == None:\n",
+    "        partido_deputado = 'Sem partido'\n",
+    "    if partido_deputado not in partidos:\n",
+    "        partidos[partido_deputado] = 1\n",
+    "    else:\n",
+    "        partidos[partido_deputado] += 1\n",
+    "    \n",
+    "\n",
+    "\n",
+    "partidos_ordenados = dict(sorted(partidos.items(), key=lambda item: item[1], reverse=True))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +133,7 @@
        "Text(0.5, 1.0, 'Número total de deputados por partido (Série histórica)')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -95,19 +149,6 @@
     }
    ],
    "source": [
-    "partidos = {}\n",
-    "for deputado in deputados_list:\n",
-    "    partido_deputado = deputado.dados.ultimoStatus.siglaPartido\n",
-    "    if partido_deputado == None:\n",
-    "        partido_deputado = 'Sem partido'\n",
-    "    if partido_deputado not in partidos:\n",
-    "        partidos[partido_deputado] = 1\n",
-    "    else:\n",
-    "        partidos[partido_deputado] += 1\n",
-    "    \n",
-    "\n",
-    "partidos_ordenados = dict(sorted(partidos.items(), key=lambda item: item[1], reverse=True))\n",
-    "\n",
     "\n",
     "x_axis = list(partidos_ordenados.keys())[:20]\n",
     "y_axis = list(partidos_ordenados.values())[:20]\n",
